--- a/style.css
+++ b/style.css
@@ -7,16 +7,16 @@ body{
 }
 
 /*imposto la dimensione del logo */
-img{
+img {
     width: 150px;
     text-align: center;
 }
 
 /*imposto le dimensioni del contenitore*/
 div{
-    width: 650px;
-    margin-left: 10%;
-    margin-right: 10%;
+    text-align: center;
+    margin-left: 20%;
+    margin-right: 20%;
 }
 
 /*imposto id per il colore della linea sotto il logo*/
